--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                     <p class="cs-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis at sit pellentesque molestie.  Diam, adipiscing ultrices eu turpis gravida.
                     </p>
-                    <a href="" class="cs-button-solid">Gret A Free Quote</a>
+                    <a href="" class="cs-button-solid">Let's Chat</a>
                 </div>
             </div>
             <!-- Background Image-->
@@ -353,7 +353,7 @@
             <!-- Logo Group -->
             <div class="cs-logo-group">
                 <a aria-label="go back to home" class="cs-logo" href="">
-                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Footer/logo-light.svg" alt="logo" width="240" height="32">
+                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="" alt="logo" width="240" height="32">
                 </a>
                 <p class="cs-text">
                     Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
@@ -386,10 +386,10 @@
                     <span class="cs-header">Contact</span>
                 </li>
                 <li class="cs-contact-li">
-                    <a class="cs-contact-link" href="tel: 123-456-7890">(123) 456-7890</a>
+                    <a class="cs-contact-link" href="tel: "></a>
                 </li>
                 <li class="cs-contact-li">
-                    <a class="cs-contact-link" href="mailto:info@codestitch.com">info@codestitch.com</a>
+                    <a class="cs-contact-link" href="mailto:info@"></a>
                 </li>
                 <!-- Social Media -->
                 <li class="cs-contact-li cs-social-group">
