fixes before I send to steve

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <img class="cs-social-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/clock-stroke-white.svghttps://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/instagram-lgrey.svg" alt="logo" width="16" height="16" aria-hidden="true" decoding="async">
                     </a>
                 </div>
-                <a href="" class="cs-button-solid cs-nav-button">Request A Quote</a>
+                <a href="" class="cs-button-solid cs-nav-button">Schedule A Consultation</a>
             </div>
         </div>
         <div class="cs-container">
@@ -327,8 +327,8 @@
         <section id="cta-51">
             <div class="cs-container">
                 <div class="cs-content">
-                    <span class="cs-topper">Contact Us</span>
-                    <h2 class="cs-title">Get It Done With Us Today</h2>
+                    <span class="cs-topper">Take The First Step</span>
+                    <h2 class="cs-title">Grow & Scale Your Business</h2>
                     <p class="cs-text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis at sit pellentesque molestie.  Diam, adipiscing ultrices eu turpis gravida.
                     </p>
@@ -352,8 +352,8 @@
         <div class="cs-container">
             <!-- Logo Group -->
             <div class="cs-logo-group">
-                <a aria-label="go back to home" class="cs-logo" href="">
-                    <img class="cs-logo-img" aria-hidden="true" loading="lazy" decoding="async" src="" alt="logo" width="240" height="32">
+                <a aria-label="go back to home" class="cs-logo" href="/">
+                    <img class="cs-logo-img" src="assets\images\blueroutelogowhite.png" aria-hidden="true" loading="lazy" decoding="async" src="" alt="logo" width="240" height="32">
                 </a>
                 <p class="cs-text">
                     Etiam nulla ultrices consequat, posuere nulla. Ac iaculis lorem phasellus ultrices adipiscing viverra sit ut quam. In diam mattis elementum diam at sed ultricies.
@@ -361,9 +361,6 @@
             </div>
             <!-- Links -->
             <ul class="cs-nav">
-                <li class="cs-nav-li">
-                    <span class="cs-header">Sitemap</span>
-                </li>
                 <li class="cs-nav-li">
                     <a class="cs-nav-link" href="">Home</a>
                 </li>
@@ -383,13 +380,13 @@
             <!-- Contact Info -->
             <ul class="cs-contact">
                 <li class="cs-nav-li">
-                    <span class="cs-header">Contact</span>
+                    <span class="cs-header">Contact Us</span>
                 </li>
                 <li class="cs-contact-li">
-                    <a class="cs-contact-link" href="tel: "></a>
+                    <a class="cs-contact-link" href="tel: ">(123) 456-7890</a>
                 </li>
                 <li class="cs-contact-li">
-                    <a class="cs-contact-link" href="mailto:info@"></a>
+                    <a class="cs-contact-link" href="mailto:info@">devtest@gmail.com</a>
                 </li>
                 <!-- Social Media -->
                 <li class="cs-contact-li cs-social-group">
