--- a/index.html
+++ b/index.html
@@ -293,28 +293,28 @@
                 </ul>
                 <div class="cs-logo-carousel">
                     <div class="cs-logo-slide">
-                        <img class="cs-logo" src="assets\svgs\insurance\anthembcbs.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\united.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\cigna.svg" alt="logo"loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\aetna.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\caresource.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\medicare.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\humana.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\tricare.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\metlife.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\kaiser-permanente.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Amazon_Web_Services_Logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Atlassian-logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Cognizant_logo_2022.svg" alt="logo"loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Fortinet-logo-rgb-black-red.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Google_2015_logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Microsoft_logo_(2012).svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Oracle_logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\IBM_logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Meta_Platforms_Inc._logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\NVIDIA_logo.svg" alt="logo" loading="lazy" decoding="async">
                     </div>
                     <div class="cs-logo-slide">
-                        <img class="cs-logo" src="assets\svgs\insurance\anthembcbs.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\united.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\cigna.svg" alt="logo"loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\aetna.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\caresource.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\medicare.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\humana.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\tricare.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\metlife.svg" alt="logo" loading="lazy" decoding="async">
-                        <img class="cs-logo" src="assets\svgs\insurance\kaiser-permanente.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Amazon_Web_Services_Logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Atlassian-logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Cognizant_logo_2022.svg" alt="logo"loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Fortinet-logo-rgb-black-red.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Google_2015_logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Microsoft_logo_(2012).svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Oracle_logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\IBM_logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\Meta_Platforms_Inc._logo.svg" alt="logo" loading="lazy" decoding="async">
+                        <img class="cs-logo" src="assets\images\partner_company_logos\NVIDIA_logo.svg" alt="logo" loading="lazy" decoding="async">
                     </div>
                 </div>
             </div>
@@ -337,9 +337,9 @@
             </div>
             <!-- Background Image-->
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/CTA/cabinets-m.jpg">
-                <source media="(min-width: 601px)" srcset="https://csimg.nyc3.digitaloceanspaces.com/CTA/cabinets.jpg">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/CTA/cabinets.jpg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/images/pexels-riciardus-307008.webp">
+                <source media="(min-width: 601px)" srcset="/assets/images/pexels-riciardus-307008.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/pexels-riciardus-307008.webp" alt="cabinets" width="1920" height="1280" aria-hidden="true">
             </picture>
         </section>                                          
     </main>
