--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png?v1">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicons/site.webmanifest">
+    {# <link rel="manifest" href="assets/favicons/site.webmanifest"> #}
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Preload -->
-    <link rel="preload" as="image" href="assets/images/logo-light.png">
+    <link rel="preload" as="image" href="assets\images\blueroutelogo.png">
     <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
     <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
@@ -352,7 +352,7 @@
         <div class="cs-container">
             <!-- Logo Group -->
             <div class="cs-logo-group">
-                <a aria-label="go back to home" class="cs-logo" href="/">
+                <a aria-label="go back to home" class="cs-logo" href="">
                     <img class="cs-logo-img" src="assets\images\blueroutelogowhite.png" aria-hidden="true" loading="lazy" decoding="async" src="" alt="logo" width="240" height="32">
                 </a>
                 <p class="cs-text">
@@ -408,50 +408,5 @@
                                 
 
     <script defer src="assets/js/nav.js"></script>
-
-    <!--Gallery JS-->
-    <script>
-        class CS_GalleryFilter {
-            filtersSelector = '.cs-button'
-            galleriesSelector = '.cs-gallery'
-            activeClass = 'cs-active'
-            hiddenClass = 'cs-hidden'
-
-            constructor() {
-                this.$galleries = document.querySelectorAll(this.galleriesSelector)
-                const $filters = document.querySelectorAll(this.filtersSelector)
-
-                this.onClick($filters[0])
-
-                for (const $filter of $filters) {
-                    $filter.addEventListener('click', () => this.onClick($filter))
-                }
-            }
-
-            onClick($filter) {
-                this.filter($filter.dataset.filter)
-
-                const { activeClass } = this
-
-                this.$activeFilter?.classList.remove(activeClass)
-                $filter.classList.add(activeClass)
-
-                this.$activeFilter = $filter
-            }
-
-            filter(filter) {
-                const showAll = filter == 'all'
-                const { hiddenClass } = this
-
-                for (const $gallery of this.$galleries) {
-                    const show = showAll || $gallery.dataset.category == filter
-                    $gallery.classList.toggle(hiddenClass, !show)
-                }
-            }
-        }
-
-        new CS_GalleryFilter()
-                                
-    </script>
 </body>
 </html>
