--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png?v1">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-    {# <link rel="manifest" href="assets/favicons/site.webmanifest"> #}
+    <!--<link rel="manifest" href="assets/favicons/site.webmanifest">-->
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Preload -->
-    <link rel="preload" as="image" href="assets\images\blueroutelogo.png">
+    <link rel="preload" as="image" href="assets/images/blueroutelogo.png">
     <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
     <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
